--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "wbraganca/yii2-fancytree-widget": "*",
         "wokster/yii2-nested-sets-tree-behavior": "*",
         "mihaildev/yii2-ckeditor": "*",
-        "2amigos/yii2-tinymce-widget": "~1.1"
+        "2amigos/yii2-tinymce-widget": "~1.1",
+        "noam148/yii2-image-manager": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
